flowise/kubernetes/flowise-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
  creationTimestamp: null
  labels:
    io.kompose.service: flowise
  name: flowise
spec:
  ports:
    - name: "9999"
      port: 9999
      targetPort: 3000
  selector:
    io.kompose.service: flowise
status:
  loadBalancer: {}
